--- a/SplitViewNews/Base.lproj/Main.storyboard
+++ b/SplitViewNews/Base.lproj/Main.storyboard
@@ -2,6 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="H1p-Uh-vWS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -101,12 +103,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="FNP-TU-QQj">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="FNP-TU-QQj">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BookmarkCell" textLabel="wMQ-f3-rZS" style="IBUITableViewCellStyleDefault" id="Wko-iH-LCX">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wko-iH-LCX" id="X7W-aX-0nq">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wMQ-f3-rZS">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcS-8Z-CZn">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="GoZ-iy-24b"/>
+                                    <barButtonItem title="Edit" id="lwi-Ks-uzt"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="5mh-0Y-kVj"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FNP-TU-QQj" firstAttribute="leading" secondItem="DJc-io-za4" secondAttribute="leadingMargin" constant="-16" id="1L1-e1-Hlk"/>
+                            <constraint firstItem="LcS-8Z-CZn" firstAttribute="top" secondItem="FNP-TU-QQj" secondAttribute="bottom" id="AX4-XN-jBY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="LcS-8Z-CZn" secondAttribute="trailing" constant="-16" id="BRH-Bz-u0S"/>
+                            <constraint firstItem="so5-V8-gUz" firstAttribute="top" secondItem="LcS-8Z-CZn" secondAttribute="bottom" id="GHU-14-gEY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="FNP-TU-QQj" secondAttribute="trailing" constant="-16" id="PXD-cB-aih"/>
+                            <constraint firstItem="FNP-TU-QQj" firstAttribute="top" secondItem="DJc-io-za4" secondAttribute="topMargin" id="RVy-TK-sVQ"/>
+                            <constraint firstItem="LcS-8Z-CZn" firstAttribute="leading" secondItem="DJc-io-za4" secondAttribute="leadingMargin" constant="-16" id="iNt-WK-Zx8"/>
+                            <constraint firstItem="LcS-8Z-CZn" firstAttribute="top" secondItem="FNP-TU-QQj" secondAttribute="bottom" id="xi6-yK-Sjg"/>
+                        </constraints>
                     </view>
                     <value key="contentSizeForViewInPopover" type="size" width="500" height="500"/>
                 </viewController>
@@ -144,25 +180,42 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86z-Sd-VSw">
-                                            <rect key="frame" x="8" y="10" width="584" height="30"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86z-Sd-VSw">
+                                            <rect key="frame" x="8" y="10" width="584" height="27"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3a2-JJ-0ga">
-                                            <rect key="frame" x="8" y="49" width="112" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3a2-JJ-0ga">
+                                            <rect key="frame" x="8" y="51" width="105" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="105" id="U3s-b6-ZM4"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Snippet" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4j-97-aAQ">
-                                            <rect key="frame" x="128" y="48" width="464" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Snippet" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4j-97-aAQ">
+                                            <rect key="frame" x="121" y="50" width="471" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="471" id="Rb3-S3-7lf"/>
+                                                <constraint firstAttribute="width" constant="471" id="dlU-X8-q0z"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                             <color key="textColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="86z-Sd-VSw" firstAttribute="trailing" secondItem="37f-cq-3Eg" secondAttribute="trailingMargin" id="3HC-d4-2z3"/>
+                                        <constraint firstItem="n4j-97-aAQ" firstAttribute="leading" secondItem="3a2-JJ-0ga" secondAttribute="trailing" constant="8" symbolic="YES" id="4Xx-4G-eMc"/>
+                                        <constraint firstItem="3a2-JJ-0ga" firstAttribute="bottom" secondItem="n4j-97-aAQ" secondAttribute="bottom" constant="1" id="ArC-s6-2eX"/>
+                                        <constraint firstItem="3a2-JJ-0ga" firstAttribute="baseline" secondItem="n4j-97-aAQ" secondAttribute="firstBaseline" constant="1" id="Cg7-nO-gVG"/>
+                                        <constraint firstItem="3a2-JJ-0ga" firstAttribute="leading" secondItem="86z-Sd-VSw" secondAttribute="leading" id="brg-W7-Y5e"/>
+                                        <constraint firstItem="86z-Sd-VSw" firstAttribute="leading" secondItem="37f-cq-3Eg" secondAttribute="leadingMargin" id="qwV-gs-sUb"/>
+                                        <constraint firstItem="86z-Sd-VSw" firstAttribute="top" secondItem="37f-cq-3Eg" secondAttribute="topMargin" constant="2" id="sOw-eS-SCs"/>
+                                        <constraint firstItem="3a2-JJ-0ga" firstAttribute="top" secondItem="86z-Sd-VSw" secondAttribute="bottom" constant="14" id="usD-e6-3Uu"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
