--- a/SplitViewNews/Base.lproj/Main.storyboard
+++ b/SplitViewNews/Base.lproj/Main.storyboard
@@ -54,6 +54,12 @@
                                             <action selector="favoriteArticle:" destination="JEX-9P-axG" id="H72-Y6-0V0"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="z7w-hc-lwO"/>
+                                    <barButtonItem title="Tweet This Article" id="yUC-PM-l73">
+                                        <connections>
+                                            <action selector="tweetArticle:" destination="JEX-9P-axG" id="Fa1-Ic-EgJ"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="dZE-yg-5tf"/>
                                 </items>
                             </toolbar>
